--- a/aulas/custom.scss
+++ b/aulas/custom.scss
@@ -35,10 +35,10 @@
 .reveal .subtitle,
 .reveal .date {
   color: #1c140d; /* Texto escuro */
-  text-align: left;
+  text-align: center;
 }
 
-.reveal .authors {
+.reveal .author {
   color: #1c140d; /* Texto escuro */
   text-align: left;
 }
@@ -64,11 +64,18 @@
 
 /* Estilizando os blocos de código para nord theme */
 .reveal pre {
-  background-color: #2e3440; /* Fundo escuro */
-  color: #d8dee9; /* Texto claro */
   padding: 10px;
   border-radius: 5px;
   font-family: 'Atkinson Hyperlegible Next', sans-serif;
   font-size: 0.9em;
   overflow-x: auto;
 }
+
+/* criar classe para centralizar imagens */
+.center-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 50%;
+}
+
